--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -1,21 +1,21 @@
-server {
-    listen       80;
-    server_name  adminator3.192.168.1.213.nip.io;
+# server {
+#     listen       80;
+#     server_name  adminator3.192.168.1.213.nip.io;
 
-    root /srv/www/public;
-    index index.html index.php;
+#     root /srv/www/public;
+#     index index.html index.php;
 
-    location / {
-        try_files $uri /index.php$is_args$args;
-    }
+#     location / {
+#         try_files $uri /index.php$is_args$args;
+#     }
 
-    location ~ \.php$ {
-        include fastcgi.conf;
-        fastcgi_index index.php;
-        fastcgi_pass fpm:9001;
-    }
+#     location ~ \.php$ {
+#         include fastcgi.conf;
+#         fastcgi_index index.php;
+#         fastcgi_pass fpm:9001;
+#     }
 
-    location ~ /\.ht {
-        deny all;
-    }
-}
+#     location ~ /\.ht {
+#         deny all;
+#     }
+# }
