--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -10,9 +10,15 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi.conf;
+        # include fastcgi.conf;
         fastcgi_index index.php;
         fastcgi_pass fpm:9002;
+        #
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
     }
 
     location ~ /\.ht {
