--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -2,7 +2,7 @@
 #     listen       80;
 #     server_name  adminator3.192.168.1.213.nip.io;
 
-#     root /srv/www/public;
+#     root /srv/www/adminator3;
 #     index index.html index.php;
 
 #     location / {
