--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -3,7 +3,7 @@ server {
     server_name  adminator2.192.168.1.213.nip.io;
 
     root /srv/www/adminator2;
-    index index.html index.php;
+    index index.php;
 
     location / {
         try_files $uri /index.php$is_args$args;
