--- a/configs/php-fpm/adminator3_pool.conf
+++ b/configs/php-fpm/adminator3_pool.conf
@@ -2,7 +2,7 @@
 chdir = /var/www/html/adminator3
 user = www-data
 group = www-data
-listen = 0.0.0.0:9001
+listen = 127.0.0.1:9001
 listen.owner = www-data
 listen.group = www-data
 ; php_admin_value[disable_functions] = exec,passthru,shell_exec,system
@@ -14,3 +14,15 @@ pm.start_servers = 2
 pm.min_spare_servers = 1 
 pm.max_spare_servers = 3
 pm.process_idle_timeout = 60s
+
+; docker stuff
+
+; php-fpm closes STDOUT on startup, so sending logs to /proc/self/fd/1 does not work.
+; https://bugs.php.net/bug.php?id=73886
+access.log = /proc/self/fd/2
+
+clear_env = no
+
+; Ensure worker stdout and stderr are sent to the main error log.
+catch_workers_output = yes
+decorate_workers_output = no
