--- a/configs/php-fpm/adminator3_pool.conf
+++ b/configs/php-fpm/adminator3_pool.conf
@@ -1,8 +1,8 @@
 [adminator3]
-chdir = /var/www/html/adminator3
+chdir = /srv/www/adminator3
 user = www-data
 group = www-data
-listen = 127.0.0.1:9001
+listen = 0.0.0.0:9001
 listen.owner = www-data
 listen.group = www-data
 ; php_admin_value[disable_functions] = exec,passthru,shell_exec,system
