--- a/configs/php-fpm/adminator2_pool.conf
+++ b/configs/php-fpm/adminator2_pool.conf
@@ -1,12 +1,13 @@
 [adminator2]
-chdir = /var/www/html/adminator2
+chdir = /srv/www/adminator2
 user = www-data
 group = www-data
-listen = 0.0.0.0:9002
+listen = 127.0.0.1:9002
 listen.owner = www-data
 listen.group = www-data
 ; php_admin_value[disable_functions] = exec,passthru,shell_exec,system
 ; php_admin_flag[allow_url_fopen] = off
+
 ; Choose how the process manager will control the number of child processes. 
 pm = dynamic 
 pm.max_children = 5 
@@ -14,3 +15,15 @@ pm.start_servers = 2
 pm.min_spare_servers = 1 
 pm.max_spare_servers = 3
 pm.process_idle_timeout = 60s
+
+; docker stuff
+
+; php-fpm closes STDOUT on startup, so sending logs to /proc/self/fd/1 does not work.
+; https://bugs.php.net/bug.php?id=73886
+access.log = /proc/self/fd/2
+
+clear_env = no
+
+; Ensure worker stdout and stderr are sent to the main error log.
+catch_workers_output = yes
+decorate_workers_output = no
