--- a/configs/php-fpm/adminator3_pool.conf
+++ b/configs/php-fpm/adminator3_pool.conf
@@ -15,6 +15,9 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 pm.process_idle_timeout = 60s
 
+; enable status page (for healthcheck scipt)
+pm.status_path = /status
+
 ; docker stuff
 
 ; php-fpm closes STDOUT on startup, so sending logs to /proc/self/fd/1 does not work.
@@ -26,3 +29,4 @@ clear_env = no
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
 decorate_workers_output = no
+
