--- a/configs/php-fpm/adminator2_pool.conf
+++ b/configs/php-fpm/adminator2_pool.conf
@@ -16,6 +16,9 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 pm.process_idle_timeout = 60s
 
+; enable status page (for healthcheck scipt)
+pm.status_path = /status
+
 ; docker stuff
 
 ; php-fpm closes STDOUT on startup, so sending logs to /proc/self/fd/1 does not work.
