--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,13 @@ services:
     ports:
       - "9001:9001"
       - "9002:9002"
+    healthcheck:
+      test: ["CMD", "FCGI_CONNECT=localhost:9001 php-fpm-healthcheck && FCGI_CONNECT=localhost:9002 php-fpm-healthcheck"]
+      interval: 1m30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+      start_interval: 5s
 
   mysql:
     image: mysql:8.0
