--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -6,7 +6,7 @@ server {
     index index.php;
 
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
@@ -20,6 +20,14 @@ server {
     }
 
     location ~ /\. {
+        deny all;
+    }
+
+    location ~ \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
+        deny all;
+    }
+
+    location ~ (Dockerfile|Makefile)$ {
         deny all;
     }
 }
