--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -5,12 +5,15 @@ server {
     root /srv/www/adminator3;
     index index.php;
 
+    # https://www.slimframework.com/docs/v4/start/web-servers.html#nginx-configuration
+    # https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/#front-controller-pattern-web-apps
+
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
+        try_files $uri $uri/ =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -20,6 +23,14 @@ server {
     }
 
     location ~ /\. {
+        deny all;
+    }
+
+    location ~ \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
+        deny all;
+    }
+
+    location ~ (Dockerfile|Makefile)$ {
         deny all;
     }
 }
