--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -26,11 +26,11 @@ server {
         deny all;
     }
 
-    location ~ \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
+    location ~ /\.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
         deny all;
     }
 
-    location ~ (Dockerfile|Makefile)$ {
+    location ~ /(Dockerfile|Makefile)$ {
         deny all;
     }
 }
