--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -5,6 +5,18 @@ server {
     root /srv/www/adminator3;
     index index.php;
 
+    location ~ /\. {
+        deny all;
+    }
+
+    location ~* ^.*\.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
+        deny all;
+    }
+
+    location ~ /(Dockerfile|Makefile)$ {
+        deny all;
+    }
+    
     # https://www.slimframework.com/docs/v4/start/web-servers.html#nginx-configuration
     # https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/#front-controller-pattern-web-apps
 
@@ -22,15 +34,4 @@ server {
         fastcgi_pass fpm:9002;
     }
 
-    location ~ /\. {
-        deny all;
-    }
-
-    location ~ /.*\.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
-        deny all;
-    }
-
-    location ~ /(Dockerfile|Makefile)$ {
-        deny all;
-    }
 }
