--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -5,18 +5,20 @@ server {
     root /srv/www/adminator3;
     index index.php;
 
+    # https://www.digitalocean.com/community/tutorials/understanding-nginx-server-and-location-block-selection-algorithms#location-block-syntax
+
     location ~ /\. {
         deny all;
     }
 
-    location ~* ^.*\.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
+    location ~* \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
         deny all;
     }
 
-    location ~ /(Dockerfile|Makefile)$ {
+    location ~ (Dockerfile|Makefile)$ {
         deny all;
     }
-    
+
     # https://www.slimframework.com/docs/v4/start/web-servers.html#nginx-configuration
     # https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/#front-controller-pattern-web-apps
 
