--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -13,10 +13,12 @@ server {
 
     location ~* \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
         deny all;
+        return 403;
     }
 
     location ~ (Dockerfile|Makefile)$ {
         deny all;
+        return 403;
     }
 
     # https://www.slimframework.com/docs/v4/start/web-servers.html#nginx-configuration
