--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -5,9 +5,28 @@ server {
     root /srv/www/adminator2;
     index index.php;
 
-    location / {
-        try_files $uri $uri/ /index.php$is_args$args;
+    # https://www.digitalocean.com/community/tutorials/understanding-nginx-server-and-location-block-selection-algorithms#location-block-syntax
+
+    location ~ /\. {
+        deny all;
     }
+
+    location ~* \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
+        deny all;
+        return 403;
+    }
+
+    location ~ (Dockerfile|Makefile)$ {
+        deny all;
+        return 403;
+    }
+
+    # https://www.slimframework.com/docs/v4/start/web-servers.html#nginx-configuration
+    # https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/#front-controller-pattern-web-apps
+
+    # location / {
+    #     try_files $uri $uri/ /index.php$is_args$args;
+    # }
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -18,16 +37,5 @@ server {
         fastcgi_index index.php;
         fastcgi_pass fpm:9002;
     }
-
-    location ~ /\. {
-        deny all;
-    }
-
-    location ~ \.(json|yml|yaml|lock|xml|bak|MD|md|sql)$ {
-        deny all;
-    }
-
-    location ~ (Dockerfile|Makefile)$ {
-        deny all;
-    }
+    
 }
