switch to fpm + nginx images - part2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,13 @@ configs:
 
 services:
   nginx:
-    # image: nginx:stable-otel
-    image: nginx:mainline-otel
+    # image: nginx:mainline-otel
+    build:
+      context: ./config/nginx/
+    develop:
+      watch: 
+        - path: ./
+          action: rebuild
     volumes:
       - ./adminator2/:/srv/www/adminator2/
       - ./adminator3:/srv/www/adminator3
