--- a/configs/nginx/Dockerfile
+++ b/configs/nginx/Dockerfile
@@ -18,9 +18,9 @@ COPY ./vhosts /etc/nginx/conf.d/
 #         && chown www-data:www-data temp log logs
 
 # app code
-COPY ../../adminator2/ /srv/www/adminator2/
-COPY ../../adminator3/ /srv/www/adminator3/
+COPY ./../../adminator2/ /srv/www/adminator2/
+# COPY ../../adminator3/ /srv/www/adminator3/
 
 # shared stuff
-COPY ../../adminator3/templates/inc.intro.category-ext.tpl /srv/www/adminator2/templates/inc.intro.category-ext.tpl
-COPY ../../adminator3/include/main.function.shared.php /srv/www//adminator2/include/main.function.shared.php
+# COPY ../../adminator3/templates/inc.intro.category-ext.tpl /srv/www/adminator2/templates/inc.intro.category-ext.tpl
+# COPY ../../adminator3/include/main.function.shared.php /srv/www//adminator2/include/main.function.shared.php
