--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,13 @@ configs:
 
 services:
   nginx:
-    # image: nginx:stable-otel
-    image: nginx:mainline-otel
-    volumes:
-      - ./adminator2/:/srv/www/adminator2/
-      - ./adminator3:/srv/www/adminator3
-      - ./configs/nginx/vhosts/:/etc/nginx/conf.d/
+    build:
+      context: ./
+      dockerfile: ./configs/nginx/Dockerfile
+    develop:
+      watch: 
+        - path: ./
+          action: rebuild
     ports:
       - 80:80
       - 443:443
