--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -41,7 +41,8 @@
         "open-telemetry/detector-container": "^1.0.0",
         "open-telemetry/transport-grpc": "^1.0.0",
         "php-http/guzzle7-adapter": "^1.0.0",
-        "amnuts/opcache-gui": "^3.5.4"
+        "amnuts/opcache-gui": "^3.5.4",
+        "phpoffice/phpspreadsheet": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
