--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -16,6 +16,11 @@ server {
         return 403;
     }
 
+    location ~* /(app|bootstrap|boostrap|build|config|cache|export|database|files2|logs|log|vendor|plugins|print|tests|templates|templates_c) {
+        deny all;
+        return 403;
+    }
+    
     location ~ (Dockerfile|Makefile)$ {
         deny all;
         return 403;
