--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -16,7 +16,12 @@ server {
         return 403;
     }
 
-    location ~* /(app|bootstrap|boostrap|build|config|cache|export|database|files2|logs|log|vendor|plugins|print|tests|templates|templates_c) {
+    location ~* /(app|bootstrap|boostrap|build|config|cache|export|database|files2|logs|log|vendor|plugins|tests|templates|templates_c) {
+        deny all;
+        return 403;
+    }
+
+    location ~* /print/temp {
         deny all;
         return 403;
     }
