fix links to print forms, fix objekty-stb actions buttons on vlastnici2 page, fix erase objekt-stb (#154)

--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -16,6 +16,16 @@ server {
         return 403;
     }
 
+    location ~* /(app|bootstrap|boostrap|build|config|cache|export|database|files2|logs|log|vendor|plugins|tests|templates|templates_c) {
+        deny all;
+        return 403;
+    }
+
+    location ~* /print/temp {
+        deny all;
+        return 403;
+    }
+
     location ~ (Dockerfile|Makefile)$ {
         deny all;
         return 403;
