--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,9 +87,9 @@ services:
       - /srv/www/adminator3/logs:uid=33,gid=33
       - /srv/www/adminator2/log:uid=33,gid=33
       # adminator print
-      - /srv/www/adminator3/print/temp:uid=33,gid=33
+      # - /srv/www/adminator3/print/temp:uid=33,gid=33
       # adminator export xls
-      - /srv/www/adminator2/export:uid=33,gid=33
+      # - /srv/www/adminator2/export:uid=33,gid=33
       # - /var/www/html/adminator3/export:uid=33,gid=33
     ports:
       - "9001:9001"
