--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ data/logs/
 data/cache/
 data/sessions/
 data/tmp/
-temp/
+/temp/
 
 #Doctrine 2
 data/DoctrineORMModule/Proxy/
@@ -38,6 +38,7 @@ adminator3/.phpunit.result.cache
 /adminator3/templates_c/
 adminator3/.phpunit.cache/
 adminator3/cache/
+adminator3/temp/
 
 # phpunit
 adminator3/phpunit.xml.bak
