--- a/adminator2/composer.json
+++ b/adminator2/composer.json
@@ -29,5 +29,13 @@
         "symfony/var-dumper": "^v6.0.2",
         "symplify/easy-coding-standard": "^v12.1",
         "symplify/coding-standard": "^v12.1"
+    },
+    "scripts": {
+        "dump": "composer dump-autoload -a",
+        "post-update-cmd": "composer dump-autoload -o",
+        "phplint": "phplint --no-cache",
+        "phpstan": "vendor/phpstan/phpstan/phpstan.phar analyse",
+        "cs:check": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots --diff --dry-run",
+        "cs:fix": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots"
     }
 }
