--- a/adminator2/composer.json
+++ b/adminator2/composer.json
@@ -22,12 +22,20 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
-        "friendsofphp/php-cs-fixer": "^v3.5.0",
+        "friendsofphp/php-cs-fixer": "^v3.54.0",
         "overtrue/phplint": "^4.1.0",
         "phpstan/phpstan": "^1.4.2",
         "squizlabs/php_codesniffer": "*",
         "symfony/var-dumper": "^v6.0.2",
         "symplify/easy-coding-standard": "^v12.1",
         "symplify/coding-standard": "^v12.1"
+    },
+    "scripts": {
+        "dump": "composer dump-autoload -a",
+        "post-update-cmd": "composer dump-autoload -o",
+        "phplint": "phplint --no-cache",
+        "phpstan": "vendor/phpstan/phpstan/phpstan.phar analyse",
+        "cs:check": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots --diff --dry-run",
+        "cs:fix": "./vendor/bin/php-cs-fixer fix --verbose --ansi --show-progress=dots"
     }
 }
