--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -42,7 +42,8 @@
         "open-telemetry/transport-grpc": "^1.0.0",
         "php-http/guzzle7-adapter": "^1.0.0",
         "amnuts/opcache-gui": "^3.5.4",
-        "phpoffice/phpspreadsheet": "^2.1"
+        "phpoffice/phpspreadsheet": "^2.1",
+        "open-feature/sdk": "^2.0.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
