--- a/adminator3/composer.json
+++ b/adminator3/composer.json
@@ -43,7 +43,8 @@
         "php-http/guzzle7-adapter": "^1.0.0",
         "amnuts/opcache-gui": "^3.5.4",
         "phpoffice/phpspreadsheet": "^2.1",
-        "open-feature/sdk": "^2.0.6"
+        "open-feature/sdk": "^2.0.6",
+        "open-feature/flagd-provider": "0.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
