--- a/configs/nginx/vhosts/001-adminator2.conf
+++ b/configs/nginx/vhosts/001-adminator2.conf
@@ -16,7 +16,7 @@ server {
         return 403;
     }
 
-    location ~* /(app|bootstrap|boostrap|build|config|cache|export|database|include|files2|logs|log|vendor|tests|templates|templates_c) {
+    location ~* /(app|bootstrap|boostrap|build|config|cache|export|database|include|files2|logs|log|vendor|tests|templates|templates_c)/ {
         deny all;
         return 403;
     }
