--- a/configs/nginx/vhosts/002-adminator3.conf
+++ b/configs/nginx/vhosts/002-adminator3.conf
@@ -21,6 +21,11 @@ server {
         return 403;
     }
 
+    location ~* /(include)/*.php {
+        deny all;
+        return 403;
+    }
+    
     location ~* /print/temp {
         deny all;
         return 403;
