--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -19,3 +19,7 @@ parameters:
 	-
 		message: "#^Function mysql_.* not found\\.$#"
 		path: include/main.function.shared.php
+	-
+		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
+		count: 1
+		path: app/Core/*/*.class.php
