--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -23,3 +23,7 @@ parameters:
 		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
 		count: 1
 		path: app/Core/*/*.class.php
+	-
+		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
+		count: 1
+		path: app/Core/shared/*.php
