--- a/adminator3/phpstan.neon
+++ b/adminator3/phpstan.neon
@@ -22,6 +22,6 @@ parameters:
 	-
 		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
 		path: app/Core/*/*.class.php
-	-
-		message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
-		path: app/Core/shared/*.php
+	# -
+	# 	message: "#^Call to an undefined static method Cartalyst\\\\Sentinel\\\\Native\\\\Facades\\\\Sentinel\\:\\:getUser\\(\\)\\.$#"
+	# 	path: app/Core/shared/*.php
